--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,24 @@ section.introduction p i{
     font-size: 1rem;
   }
 }
+@media (min-width: 768.9px){
+  section.introduction{
+    background-color: rgba(236, 216, 150, 0.7);
+    margin: 1rem 10rem;
+    text-align: center;
+    border-radius: 7px;
+    padding: 1rem;
+    color: #322E6F;
+  }
+  h1{
+    font-size: 3.5rem;
+  }
+  p.intro{
+    font-weight: 800;
+    color: black;
+    font-size: 1.3rem;
+  }
+}
 /*    end of introductory section styles    */
 /**/
 /**/
@@ -99,6 +117,9 @@ footer .row .copyright{
   h1{
     font-size: 2rem;
   }
+  .social li{
+    margin: 0.5rem;
+  }
   .social li a i{
     border: solid 0.15rem #198754;
     border-radius: 50%;
@@ -115,6 +136,9 @@ footer .row .copyright{
     position: absolute;
     background-repeat: repeat-y;
   }
+  footer{
+    padding: 1.2rem;
+  }
 }
 @media (min-width: 480.9px){
   h1{
@@ -130,6 +154,12 @@ footer .row .copyright{
     font-size: 1.125rem;
     transition: .3s;
   }
+  footer{
+    padding: 2.25rem;
+  }
+  .social li{
+    margin: 0.8rem;
+  }
 }
 @media (min-width: 768.9px){
   h1{
@@ -144,6 +174,12 @@ footer .row .copyright{
     line-height: 2.8rem;
     font-size: 1.5rem;
     transition: .3s;
+  }
+  footer{
+    padding: 3rem;
+  }
+  .social li{
+    margin: 1rem;
   }
 }
 /*    end of footer styles    */
