Add the gender form

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,9 @@ section.introduction p i{
   }
 }
 /*    end of introductory section styles    */
-/**/
+/*    start of content section styles    */
+
+/*    end of content section styles    */
 /**/
 /**/
 
