--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,6 @@ section.introduction{
   text-align: center;
   border-radius: 7px;
   padding: 1rem;
-  color: #322E6F;
 }
 p.intro{
   font-weight: 800;
@@ -80,7 +79,18 @@ section.introduction p i{
 }
 /*    end of introductory section styles    */
 /*    start of content section styles    */
-
+section.content .row .left{
+  background-color: rgba(236, 216, 150, 0.7);
+  margin: 1rem 1rem 1rem 2.6rem;
+  border-radius: 7px;
+  padding: 1rem;
+}
+section.content .row .right{
+  background-color: rgba(236, 216, 150, 0.7);
+  margin: 1rem;
+  border-radius: 7px;
+  padding: 1rem;
+}
 /*    end of content section styles    */
 /**/
 /**/
