--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,10 @@ section.content .row .right{
   background-color: rgba(236, 216, 150, 0.7);
   margin: 1rem;
   border-radius: 7px;
-  padding: 1rem;
+  color: #198754;
+  text-align: center;
+  font-family: 'Kreon', serif;
+  font-size: 1.5rem;
 }
 section.content label.date, section.content label.gender{
   font-family: 'Kreon', serif;
@@ -99,6 +102,7 @@ section.content .btn-outline-success{
   margin-top: 2.22rem;
   margin-left: 2rem;
 }
+
 @media (min-width: 350px){
   section.content .row .left{
     margin: 1rem;
